--- a/content/page/faq2018.md
+++ b/content/page/faq2018.md
@@ -18,4 +18,8 @@ showActions:    false
 + **Question:** Is there any kind of housing stipend/financial remuneration available for participating students. 
 
     *Answer*: Most of the projects are providing stipends at the level of $5,000 for the duration of the project. No housing will be provided. 
+    
++ **Question:** I am a student in program A and am interested in Project B. Am I eligble to apply?
+
+    *Answer*: All projects are open to qualified students. There is no restriction to specific academic programs.
 
