--- a/content/page/faq2018.md
+++ b/content/page/faq2018.md
@@ -23,3 +23,6 @@ showActions:    false
 
     *Answer*: All projects are open to qualified students. There is no restriction to specific academic programs.
 
++ **Question:** I will working as a student researcher in lab xxx under the supervision of Professor YY this summer. I am interested in participating in the DSI scholars program's activities (e.g., boot camp, weekly meet-ups, etc). Can I apply?
+
+    *Answer*: Yes, with your faculty advisor's permission, you are welcome to participate when space permits. The matching fund for stipend has all been given out but we welcome all undergraduate researchers to participate in the DSI scholars activities such as the boot camp, the weekly series and the fall poster social. Please write to <dsi-scholars@columbia.edu>.
