--- a/content/page/faq2019.md
+++ b/content/page/faq2019.md
@@ -1,7 +1,7 @@
 ---
 title: Frequently Asked Questions (Fall 2019)
 author: Tian Zheng
-date: '2018-01-23'
+date: '2019-10-17'
 slug: faq2019
 categories:
   - info
@@ -11,6 +11,14 @@ comments:       false
 showMeta:       false
 showActions:    false
 ---
++ **Question:** Will there be projects in the spring/summer?
+
+    *Answer*: Yes, there will be another call for projects in December, and students in January. All current projects will be up for renewal under an expedited process, and interested students are encouraged to talk to their PIs about continuing.
+
++ **Question:** With only one application form, how do I express interest in more than one project?
+
+    *Answer*: It is recommended that you prioritize based on your interest and skills. To a large extent, the methods of data science can be translated from one domain to another so demonstrating core competency is paramount. If you feel the need, you can address a portion of your personal statement to the PIs of each program to which you are applying.
+
 + **Question:** Is there still space to host interns for this program?  I have a student researcher in my lab who was interested in participating.
 
     *Answer*: The distribution of matching funds has ended. However, we will be happy to host your student researcher in our learning activities as a DSI scholar for Spring-Summer 2020.
