--- a/content/page/faq2020.md
+++ b/content/page/faq2020.md
@@ -15,6 +15,14 @@ showActions:    false
 
     *Answer*: It is recommended that you prioritize based on your interest and skills. To a large extent, the methods of data science can be translated from one domain to another so demonstrating core competency is paramount. If you feel the need, you can address a portion of your personal statement to the PIs of each program to which you are applying.
 
++ **Question:** I am a remote-only student and will not be available for in-person meetings. Can I still apply?
+
+    *Answer*: You are still eligible for the program as a whole, however, some of the faculty may have a preference for in-person meetings. You are encouraged you to apply and, if selected, those details can be worked out between you and the project owner.
+
++ **Question:** I recently graduated in December, 2019. Am I still eligible for the program?
+
+    *Answer*: Unfortunately, this program is oriented towards current students.
+
 + **Question:** Is there still space to host interns for this program?  I have a student researcher in my lab who was interested in participating.
 
     *Answer*: The distribution of matching funds has ended. However, we will be happy to host your student researcher in our learning activities as a DSI scholar for the Summer.
@@ -23,7 +31,7 @@ showActions:    false
 
     *Answer*: Most of the projects are providing stipends at the level of $5,000 for the duration of the project.
     
-+ **Question:** I am a student in program A and am interested in Project B. Am I eligble to apply?
++ **Question:** I am a student in program A and am interested in Project B. Am I eligible to apply?
 
     *Answer*: All projects are open to qualified students. There is no restriction to specific academic programs.
 
