--- a/content/page/faq2020.md
+++ b/content/page/faq2020.md
@@ -23,6 +23,10 @@ showActions:    false
 
     *Answer*: Unfortunately, this program is oriented towards current students.
 
++ **Question:** I am unable to work in the spring (or summer). Are there projects that are open only in the summer (or spring)?
+
+    *Answer*: Yes, some projects are only active in one term or the other. The start and end dates are listed on most project pages. Those without end-dates are ongoing. Furthermore, the periods during which each project are active are listed underneath the projects' titles. You can select the term in which you are interested and scan for those exclusive to that time period.
+
 + **Question:** Is there still space to host interns for this program?  I have a student researcher in my lab who was interested in participating.
 
     *Answer*: The distribution of matching funds has ended. However, we will be happy to host your student researcher in our learning activities as a DSI scholar for the Summer.
